# college-football-bets

./: README.md  main.py  pyproject.toml
notebooks/: eda.ipynb  football_stats.ipynb
