[project]
name = "college-football-bets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "cfbd>=5.13.2",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "statsmodels>=0.14.5",
]
